--- a/蘵感ZanGan上傳/breadcrumb.css
+++ b/蘵感ZanGan上傳/breadcrumb.css
@@ -12,7 +12,8 @@ body{
 /* 整列麵包屑 */
 .wrap,
 #media_page .wrap{
-    margin: 20px 23px;
+    margin: 20px 17px;
+    /* border: solid 3px red; */
     /* padding: 10px 0; */
     /* background-color: #3c6382; */
     /* box-shadow: 0px 5px 5px rgba(51, 84, 110, 0.6) */
