--- a/蘵感ZanGan上傳/pages.css
+++ b/蘵感ZanGan上傳/pages.css
@@ -213,164 +213,126 @@ h4 {
     padding: 5px 0;
 }
 
-#news_content h3 {
+.more {
+    font-size: 14px;
+    color: #1D201D;
+    letter-spacing: 2px;
+}
+img{
+    display: block;
+    width: 100%;
+}
+
+.date{
     font-family: 'Unna', serif;
 }
 
-/* 1.1 1.2topbar white green 精簡+100%  */
+/* topbar */
 #topbar,
-#topbarw {
-    /* width: 100%; */
-    background-color: #3C4935;
+#topbarw{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    text-align: center;
-    padding: 0 5px;
-    height: 80px;
-    /* 固定捲軸 */
+    background-color: #3C4935;
     position: sticky;
     top: 0;
     left: 0;
     z-index: 9999;
-    /* border: solid 3px pink; */
 }
 
-#topbarw {
+#topbarw{
     background-color: rgba(255, 255, 255, 0.05);
 }
 
-/* 各別區域 */
-#topbar ul,
-#topbarw ul {
+.menu,
+.icon{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    margin-right: 45px;
+    margin:  10px 40px;
+    /* border: solid 3px red; */
 }
 
-/* 單個 */
-#topbar li,
-#topbarw li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 15px;
-    /* border: solid 5px pink; */
+.menu li,
+.icon li{
+    margin: 5px 10px;
+    /* border: solid 3px red; */
 }
 
-/* 單個文字 */
 #topbar h3,
-#topbarw h3 {
+#topbarw h3{
     color: #fff;
-    font-size: 14px;
-    letter-spacing: 2px;
-    /* margin: 0 5px; */
 }
 
-/* 快速報名 */
-#topbar .signup,
-#topbarw .signup {
+#topbar .logo img,
+#topbarw .logo img{
+    display: block;
+    margin-right: 30px;
+    /* border: solid 3px red;  */
+}
+
+.icon_signup{
     display: flex;
-    background-color: rgba(155, 130, 86, .74);
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(155, 130, 86, 0.74);
+    border-radius: 2px;
     padding: 5px;
-    margin: 0 35px 0 50px;
-    font-family: "Noto Serif TC";
-    width: 160px;
+    width: 130px;
+}
+
+.icon_signup img{
+    width: 20px;
+    height: 20px;
+}
+
+.icon_login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+}
+
+.icon_login h3{
+    width: 60px;
+}
+
+.icon_login img{
+    width: 25px;
     height: 25px;
-    border-radius: 5px;
-    /* border: solid 5px salmon; */
+    margin: 0 5px;
 }
 
-/* 箭頭圖案 */
-#topbar .space,
-#topbarw .space {
-    margin-left: 20px;
-    /* border: solid 5px salmon; */
-}
-
-/* 登入區 */
-#topbar .login_box,
-#topbarw .login_box {
-    margin-right: 25px;
-}
-
-/* 登入圖案 */
-#topbar .login,
-#topbarw .login {
-    /* display: block;
-    text-decoration: none; */
-    margin-right: 5px;
-    /* border: solid 5px salmon; */
-}
-
-/* logo */
-#topbar .logo,
-#topbarw .logo {
-    /* position: absolute;
-    top: 12px;
-    right: 560px; */
-    margin: 0 50px 0 90px;
-}
-
-/* icon */
-#topbar .icon,
-#topbarw .icon {
-    /* position: absolute; */
-    /* right: -32px; */
-    /* top: 15px; */
-    margin: 0 0 0 80px;
-}
-
-/* 購物車圖案 */
-#topbar .carticon,
-#topbarw .carticon {
-    margin-left: -10px;
-}
-
-/* menu */
-#topbar .menu,
-#topbarw .menu {
-    /* position: absolute;
-    left: 95px;
-    top: 25px; */
-    margin: 0 0 0 80px;
-}
-
-/* 2.news  news_content*/
-#news {
+/* 2.news_content */
+#news_content  {
     /* display: flex; */
     /* justify-content: space-between; */
     /* align-items: center; */
-    position: relative;
-    /* border: solid 5px rgb(225, 166, 166); */
-    height: 100vh;
+    /* position: relative;
+    border: solid 5px rgb(216, 225, 166);
+    height: 100vh; */
 }
 
 /* 圖片的範圍 */
 .news_main {
     /* width: 300px; */
-    /* height: 500px; */
+    /* height: 500px;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 0; */
     /* border: solid 5px red; */
 }
 
-/* 左邊圖片 */
-.news_main img {
-    height: 100vh;
-}
 
 #news.title {
-    background-color: #F0F0F0;
+    /* background-color: #F0F0F0; */
 }
 
 /* 主要文字內容區塊 */
 #news .news_col {
-    width: 700px;
+    /* width: 700px;
     height: 620px;
-    margin: 40px 550px;
+    margin: 40px 550px; */
     /* border: solid 5px red; */
     /* t1 */
     /* display: flex;
@@ -380,17 +342,17 @@ h4 {
 
 /* hr */
 .news_hrline {
-    width: 700px;
+    /* width: 700px; */
 }
 
 /* news 標題區塊 */
 #news nav {
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
     position: relative;
     width: 700px;
-    /* padding: 10px 0; */
-    margin: 0 15px;
+    padding: 10px 0;
+    margin: 0 15px; */
 }
 
 /* 查看更多 */
@@ -415,6 +377,12 @@ h4 {
     /* border: solid 5px rgb(144, 178, 213); */
 }
 
+.news_news .hr1{
+    margin-bottom: 10px;
+    /* border: solid 5px rgb(144, 178, 213); */
+}
+
+
 /* icon右圈圈箭頭 */
 .news_img {
     position: absolute;
@@ -431,7 +399,7 @@ h4 {
     background-image: url(img/index/index-news/arrow\(白\).svg);
 }
 
-.news_img :hover {
+.news_img:hover {
     background-image: url(img/index/index-news/arrow\(黑\).svg);
 }
 
@@ -441,6 +409,7 @@ h4 {
     margin: 10 0px;
     text-align: start;
     width: 700px;
+    font-family: 'Unna', serif;
 }
 
 .news_text {
@@ -453,21 +422,17 @@ h4 {
 }
 
 .news_hr {
-    padding: 5px;
+    /* padding: 5px;
     width: 700px;
-    border-color: #797474;
+    border-color: #797474; */
     /* margin: 5 5 0 5px; */
 }
 
-/* 3.  1-2news_content */
+/* 2.news_content */
 /* 分頁排版不同 */
 #news_content {
-    padding-top: 50px;
+    padding: 50px 0;
     /* border: solid 5px red; */
-}
-
-#news_content .title {
-    /* border: solid 5px rgb(181, 212, 153); */
 }
 
 /* 標題區 */
@@ -486,7 +451,7 @@ h4 {
 /* 選單區 */
 #news_content li {
     padding: 5px 5px;
-    margin: 0 5px;
+    margin: 0 10px;
     /* display: flex;
     text-align: center;
     align-items: center;*/
@@ -495,7 +460,6 @@ h4 {
 #news_content li a:hover {
     background-color: #3C4935;
     color: #fff;
-    /* +++ */
     display: block;
     text-decoration: none;
     width: 180px;
@@ -525,10 +489,25 @@ h4 {
 /* 主要區塊 */
 #news_content .nc_main {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    margin-left: 40px;
+    /* margin: 0 50px 0 -120px; */
+    /* margin-left: 40px; */
     /* border: solid 5px rgb(228, 147, 147); */
+}
+
+#news_content .img2{ 
+    display: block;
+    width: 24%;
+    /* height: 80vh; */
+    margin: 0 -50px 0 50px;
+    /* border: solid 3px red; */
+}
+
+/* 左邊圖片 */
+.nc_main img {
+    width: 85%;
+    height: 95vh;
 }
 
 .news_date {
@@ -536,7 +515,6 @@ h4 {
     color: #1d201d;
     letter-spacing: 2px;
     padding: 10px;
-    margin: 10 0px;
     text-align: start;
     width: 700px;
 }
@@ -556,29 +534,20 @@ h4 {
     color: #1D201D;
 }
 
-#news_content .img2 {
-    /* width: 300px;
-    height: 600px;
-    border: solid 5px rgb(154, 228, 147); */
-}
-
 .news_col {
-    margin: 0 20px;
+    margin: 0 30px;
     /* border: solid 5px rgb(154, 228, 147); */
 }
 
-
-
-/* ----------------------------------------news_page分頁---------------------------------------- */
-/* 4. 1-3 news_page */
-/* 最新消息詳情頁 */
+/* ------news_page-最新消息詳情頁----- */
 #news_page,
 #media_page {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 50px 0;
     /* height: 100vh; */
-    margin-bottom: -350px;
+    /* margin-bottom: -350px; */
     /* border: #6dcbb5 5px solid; */
 }
 
@@ -593,14 +562,13 @@ h4 {
 /* 主要區塊 */
 /* 框住date和section的範圍block */
 /* 水平 */
-.news_page_block,
-.media_page_block {
+.news_page_block{
     background-color: rgba(240, 240, 240, .3);
     display: flex;
     justify-content: center;
     margin: 40px 10px;
-    width: 1020px;
-    height: 3140px;
+    height: 700px;
+    width: 1120px;
     /* border: #f17d0a 5px solid; */
 }
 
@@ -608,10 +576,9 @@ h4 {
 .date {
     font-size: 28px;
     font-weight: 400;
-    color: #656565;
-    opacity: 0.5;
+    color: rgba(101,101,101,0.5);
     letter-spacing: 1px;
-    margin: 30px 10px 30px 20px;
+    margin: 30px 20px 30px 0;
     font-family: 'Unna', serif;
     /* border: #cf5a85 5px solid; */
 }
@@ -628,7 +595,7 @@ h4 {
 .media_page_section {
     color: #1D201D;
     width: 750px;
-    margin: 30px 5px;
+    margin: 30px 30px 30px 0;
     /* border: #62e4f5 5px solid; */
 }
 
@@ -671,7 +638,12 @@ h4 {
     justify-content: space-around;
 }
 
-.news_page_main,
+.news_page_main {
+    position: relative;
+    /* width: 100%; */
+    /* border: #799ed5 5px solid; */
+}
+
 .media_page_main {
     position: relative;
     /* border: #799ed5 5px solid; */
@@ -685,10 +657,11 @@ h4 {
 
 .news_page_logo img {
     display: block;
-    width: 75px;
-    height: 400px;
-    margin-left: 760px;
-    margin-top: -400px;
+    /* width: 75px; */
+    /* height: 400px; */
+    /* margin-left: 760px; */
+    /* margin-top: -400px; */
+    margin: -400px 0 0 795px ;
     /* border: #7a15d3 5px solid; */
 }
 
@@ -738,9 +711,9 @@ h4 {
 /* -------------------------media-------------------- */
 /* 共用區 */
 
-/* 2-1media */
+/* 2-1media_area */
 /* 首頁和單一分頁各一個 */
-#media {
+#media_area {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -748,28 +721,23 @@ h4 {
     /* border: solid 5px rgb(242, 207, 207); */
 }
 
-/* 整個區塊 */
-main {
-    /* border: solid 5px red; */
-}
-
-#media .title {
+#media_area .title {
     text-align: center;
     /* border: solid 5px red; */
 }
 
-#media ul {
+#media_area ul {
     display: flex;
     justify-content: center;
 }
 
 /* 選單區 */
-#media .subnav {
+#media_area .subnav {
     padding: 5px 5px;
     margin: 0 5px;
 }
 
-#media .subnav a:hover {
+#media_area .subnav a:hover {
     background-color: #3C4935;
     color: #fff;
     display: block;
@@ -785,7 +753,7 @@ main {
 }
 
 /* 單一按鈕 */
-#media .subnav a {
+#media_area .subnav a {
     display: block;
     text-decoration: none;
     width: 180px;
@@ -799,35 +767,22 @@ main {
 }
 
 /* 圖片 */
-#media figure img {
+#media_area figure img {
     width: 380px;
     height: 180px;
     /* border: solid 5px rgb(241, 156, 156); */
 }
 
 /* 閱讀更多 */
-.media_more {
-    /* padding: 5px;
-    margin: 5px;
-    font-size: 14px;
-    color: #1D201D;
-    letter-spacing: 2px; */
-    /* border: solid 5px rgb(156, 234, 241); */
-    /* position: absolute;
-    right: 0;
-    bottom: 0; */
-}
-
-/* 閱讀更多 */
-#media .more{
+#media_area .more{
     margin-top: 5px;
     margin-left: 490px;
 }
-#media .more a{
-    margin-bottom: -18px;
+#media_area .more a{
+    margin-bottom: -10px;
     /* border: solid 5px salmon; */
 }
-#media .more h3{
+#media_area .more h3{
     font-size: 14px;
     font-weight: 500;
 }
@@ -862,18 +817,18 @@ p {
     /* border: solid 5px rgb(197, 230, 170); */
 }
 
-#media h1 {
+#media_area h1 {
     padding-bottom: 20px;
 }
 
-#media h3 {
+#media_area h3 {
     color: #5C5C5C;
     font-weight: 500;
     /* border: solid 5px rgb(197, 230, 170);  */
 }
 
 /* MEDIA */
-#media .title h3{
+#media_area .title h3{
     font-family: 'Unna', serif;
 }
 
@@ -883,7 +838,7 @@ p {
 }
 
 /* 【課程快訊】手作... */
-#media .list_box h2{
+#media_area .list_box h2{
     font-weight: 700;
 }
 
@@ -893,7 +848,15 @@ p {
     color: #797474;
 }
 
-/* 瞭解課程 #media_page a 在上面合併 */
+.media_page_block {
+    background-color: rgba(240, 240, 240, .3);
+    display: flex;
+    justify-content: center;
+    margin: 40px 10px;
+    width: 1020px;
+    height: 3140px;
+    /* border: #f17d0a 5px solid; */
+}
 
 /*底層logo */
 .media_page_logo img {
@@ -1095,11 +1058,19 @@ p {
     justify-content: space-around;
     align-items: center;
     margin-top: 400px;
+    width: 100%;
+    height: 50vh;
+}
+
+#footer img{
+    width: 30%;
 }
 
 .footer_ul {
     display: flex;
-    margin-left: 140px;
+    /* border: solid 5px salmon; */
+    width: 92%;
+    /* margin-left: -60px; */
 }
 
 .footer_li {
@@ -1109,19 +1080,21 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 15px 20px 0 30px;
+    /* margin: 15px 20px 0 30px; */
     /* margin-left: 50px; */
+    /* margin: 40px 0 0; */
+    /* margin: 40px 0; */
     /* border: solid 5px salmon; */
 }
 
 /* 上面列 */
 .footer_nav {
-    margin: 30px 0;
+    /* margin: 30px 0; */
 }
 
 /* 下面列 */
 .footer_main {
-    margin: 30px 0;
+    /* margin: 30px 0; */
 }
 
 .copyright {
@@ -1140,4 +1113,31 @@ p {
 #footer h3 {
     color: #E7E4DB;
 
+}
+
+#footer li{
+    margin: 30px 0;
+    /* border: solid 3px red; */
+}
+
+.footer_main{
+    margin-top:-30px ;
+} 
+
+#footer h3 .addr{
+    margin: 10px 0;
+    /* border: solid 3px rgb(200, 134, 134); */
+}
+
+#footer h3 .time{
+    margin:30px 0  ;
+} 
+
+#footer h3 .time h3{
+    margin: 10px 0;
+}
+
+#footer .faq{
+    margin-top: -150px;
+    /* border: solid 3px rgb(200, 134, 134);  */
 }
