--- a/蘵感ZanGan上傳/style.css
+++ b/蘵感ZanGan上傳/style.css
@@ -331,7 +331,15 @@ img{
     width: 100%;
     height: 100%;
 }
-
+/* 背景圖片 */
+#banner figure{
+    display: block;
+    /* width: 100%; */
+    height: 90vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 #banner .text {
     color: #fff;
     display: flex;
@@ -352,6 +360,12 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 30px;
+}
+#banner .more img{
+    margin: -6px 0 2px;
+    width: 50px;
+    height: 50px;
 }
 
 #banner h1 {
@@ -595,6 +609,7 @@ img{
 
 /* 5.teachers */
 #teachers {
+    /* height: 100vh; */
     /* color: #1d201d;
     background-color: #F0F0F0;
     height: 100vh;
@@ -840,7 +855,7 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: -60px;
+    /* margin-top: -60px; */
 }
 
 /* 左邊圖片 */
@@ -1119,7 +1134,6 @@ img{
 }
 
 /*----------------- signup0課程報名----------------- */
-
 /* signup0共用區 */
 /* 字的顏色 */
 #signup0 h1,
@@ -1157,8 +1171,21 @@ img{
     align-items: center;
     position: relative;
     height: 40vh;
-    margin: 0 auto;
-    /* border: solid 1px salmon;  */
+    margin-left: -75px;
+    /* margin-left:-270px ; */
+    /* border: solid 3px salmon;  */
+}
+
+/* signup的整個區塊 */
+#signup0 .block11 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 40vh;
+    /* margin: 0 auto; */
+    margin-left:-270px ;
+    /* border: solid 3px salmon;  */
 }
 
 /* 左半區塊 */
@@ -1173,7 +1200,8 @@ img{
     justify-content: center;
     align-items: center;
     background-color: rgba(240, 240, 240, 0.3);
-    width: 82%;
+    /* width: 82%; */
+    width: 92%;
     height: 20vh;
     margin: 20px;
     /* border: solid 5px salmon; */
@@ -1213,7 +1241,11 @@ img{
     color: #DACFB8;
     border-color: #DACFB8;
     width: 200px;
+    /* height: 2.5px; */
     /* border: solid 3px pink; */
+}
+#signup0 .box1 hr{
+    border: solid #DACFB8 1px;
 }
 
 /* 分格線 */
@@ -1254,7 +1286,7 @@ img{
 #signup0 .arrow_w{
     width: 9.75%;
     height: 7.75vh;
-    margin: 0 0 0 10px;
+    margin: 0 32px 0 10px;
     /* border: solid 3px red; */
     background-image: url(img/index/index-news/arrow\(白\).svg);
 }
@@ -1262,7 +1294,7 @@ img{
 #signup0 .arrow_w:hover {
     width: 9.75%;
     height: 7.75vh;
-    margin: 0 0 0 10px;
+    margin: 0 32px 0 10px;
     background-image: url(img/index/index-news/arrow\(黑\).svg);
     display: block;
     /* width: 40px;
@@ -1414,17 +1446,20 @@ img{
 
 /* 活動 */
 #signup0 .act h3 {
-    background-color: #9B8256;
-    color: #fff;
-    width: 62px;
-    height: 10px;
+    /* background-color: #9B8256;
+    color: #fff; */
+    /* width: 62px; */
+    /* height: 80px; */
+    /* display: block;
+    width: 10%;
+    height: 20vh;
     border-radius: 0 5px 5px 0;
-    text-align: end;
-    line-height: 10px;
-    padding-right: 15px;
-    position: absolute;
-    top: 0;
-    left: 0;
+    text-align: end; */
+    /* line-height: 10px; */
+    /* padding-right: 15px; */
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
     /* border: solid 5px rgb(231, 156, 165);  */
 }
 
@@ -1463,7 +1498,7 @@ img{
 }
 
 #signup0 .nav2 {
-    margin-top: 177px;
+    margin-top: 160px;
     /* border: solid 5px rgb(196, 222, 244); */
 }
 
@@ -1491,6 +1526,7 @@ img{
 #signup0 .box3 {
     /* border: solid 5px salmon; */
 }
+
 
 /* signup suc區 報名成功區 */
 #signup0 .list3 {
@@ -1588,12 +1624,15 @@ img{
 #signup0 .act h3 {
     background-color: #9B8256;
     color: #fff;
-    width: 62px;
-    height: 10px;
-    border-radius: 0 5px 5px 0;
+    /* width: 62px;
+    height: 10px; */
+    width: 10%;
+    height: 3vh;
+    border-radius: 0 3px 3px 0;
     text-align: end;
-    line-height: 10px;
-    padding-right: 15px;
+    padding: 2px 0;
+    /* line-height: 10px; */
+    padding-right: 10px;
     position: absolute;
     top: 0;
     left: 0;
@@ -1622,31 +1661,9 @@ img{
 }
 
 
-/* +++ */
-/* 小標題區 */
-/* #signup0 .subtitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-
-/* hr */
-/* #signup0 .hr hr {
-    width: 370px;
-    height: 2.7px;
-    margin: 5px 0 5px 65px;
-    border-color: #DACFB8;
-    background-color: #DACFB8;
-} */
-
-/* 課程 活動 */
-/* #signup0 .subtitle h4 {
-    color: #DACFB8;
-    margin: 0 30px 0 50px;
-} */
-
 /* ------cart 購物車區------ */
 #cart {
+    margin: 50px;
     /* width: 100%; */
     /* border: solid 5px red; */
 }
@@ -1656,13 +1673,18 @@ img{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* justify-content: space-between; */
     align-items: center;
     margin-top: 20px;
+}
+#cart h3{
+    margin-bottom: 10px;
 }
 
 /* 資料核對區 */
 #cart nav {
-    width: 1000px;
+    /* width: 1000px; */
+    width: 92%;
     background-color: rgba(240, 240, 240, 0.3);
     display: flex;
     flex-direction: column;
@@ -1725,10 +1747,15 @@ img{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-left: 105px;
-    margin-right: auto;
+    /* margin-left: 105px; */
+    /* margin-right: auto; */
+    /* justify-content: space-between; */
 }
 
+/* Course */
+#cart .course_c{
+    margin-left:50px ;
+} 
 /*cart: Course Price Quantity Subtotal 單一個 */
 #cart .bar h3 {
     margin-right: 90px;
@@ -1737,12 +1764,13 @@ img{
 
 /* cart price間隔 */
 #cart .price {
-    margin-left: 400px;
+    margin-left: 455px;
 }
 
 /* cart hr長度  */
 #cart .hrb {
-    width: 1000px;
+    /* width: 1000px; */
+    width: 92%;
     margin: 0 auto;
     border-color: #797474;
 }
@@ -1752,7 +1780,8 @@ img{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 1000px;
+    /* width: 1000px; */
+    width: 92%;
     margin: 20px auto;
     height: 80px;
     /* border: solid 5px salmon; */
@@ -1764,13 +1793,15 @@ img{
 }
 
 /* cart茶藝興趣A班  */
-#cart .tea h3 {
-    margin: 0 80px;
-    color: #5C5C5C;
-}
-
 #cart .tea h2 {
     color: #5C5C5C;
+}
+/*週五下午14:00-16:00，共6堂...  */
+#cart .tea .friday {
+    /* margin: 0 80px; */
+    margin: 0 85px 0 130px;
+    color: #5C5C5C;
+    /* border: solid 3px rgb(241, 181, 181); */
 }
 
 /* cart $8000區塊 */
@@ -1877,11 +1908,14 @@ img{
 #cart .act h3 {
     background-color: #9B8256;
     color: #fff;
-    width: 62px;
-    height: 10px;
-    border-radius: 0 5px 5px 0;
+    /* width: 62px;
+    height: 10px; */
+    width: 60%;
+    height: 4vh;
+    border-radius: 0 3px 3px 0;
     text-align: end;
-    line-height: 10px;
+    line-height: 4vh;
+    /* line-height: 10px; */
     padding-right: 15px;
     margin-left: 0.1px;
     margin-top: -20px;
@@ -1899,8 +1933,10 @@ img{
 
 /* 下午14:00-16:00，共1堂 */
 #cart .noon {
-    margin-left: -55px;
-    margin-right: 90px;
+    /* margin-left: -55px; */
+    /* margin-right: 90px; */
+    margin: 0 175px 0 92px;
+    /* border: solid 3px red; */
 }
 
 /* total購物車總計 */
@@ -1908,9 +1944,11 @@ img{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: flex-end;
-    margin: 50px auto;
-    width: 1000px;
+    align-items: center;
+    margin: 50px 0 50px 62.8%;
+    /* width: 1000px; */
+    width: 35%;
+    /* border: solid 3px red; */
 }
 
 /* 購物車總計NT$8000文字區塊 */
@@ -1928,9 +1966,10 @@ img{
 }
 
 /* short hr */
-#cart hr {
+#cart .total hr {
     width: 350px;
     height: 0;
+    /* text-align: end; */
 }
 
 /* NT$8000 */
@@ -1949,7 +1988,7 @@ img{
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    margin-right: 140px;
+    margin-right: 70px;
 }
 
 /* 送出預約訂單按鈕 */
@@ -1969,17 +2008,21 @@ img{
 
 /* 上一個步驟 */
 #cart .more {
-    margin-left: 100px;
+    margin-left: 30px;
 }
 
 /* 上一個步驟 Prev Step */
 #cart .more h3 {
     margin-left: 20px;
-    margin-bottom: -10px;
+    padding: 15px 0;
+    /* border: solid 3px red; */
 }
 
+
 /* reserve 預約成功區 */
-#reserve {}
+#reserve {
+
+}
 
 /* 上面導覽列 */
 #reserve .nav {
